
@startuml

    !include lexakai.theme
    
    title "diagram-registry"
    
    interface RegistryTrait
    
    class InstanceIdentifier
    {
        --(constructors)--
        #InstanceIdentifier(Enum<?>)
        #InstanceIdentifier(String)
        --(identity)--
        +Enum<?> enumIdentifier()
        +InstanceIdentifier instanceIdentifier(Enum<?> enumValue)
        +InstanceIdentifier instanceIdentifier(String)
        +InstanceIdentifier instanceIdentifierForEnumName(Listener, String enumValueName)
        +InstanceIdentifier singletonInstanceIdentifier()
        +String stringIdentifier()
        --(naming)--
        +String name()
    }
    
    RegistryTrait <|-- Registry
    Registry --> InstanceIdentifier : "locates instances with"
    class Registry
    {
        --
        +Registry globalRegistry()
        +Registry registryFor(Object)
    }
    
@enduml

